--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ dependencies {
     compile group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.121'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.121'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.6'
-    testCompile group: 'org.powermock', name: 'powermock-api-easymock', version: '1.6.6'
-    testCompile group: 'org.easymock', name: 'easymock', version: '3.4'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
 }
 
 task buildZip(type: Zip) {
