--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
+    compile group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '1.3.0'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j', version: '1.0.0'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.121'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.121'
